--- a/super-rustycom-client/Cargo.toml
+++ b/super-rustycom-client/Cargo.toml
@@ -6,3 +6,5 @@ authors = ["Santeri Salmijärvi <santeri.salmijarvi@aalto.fi>"]
 [dependencies]
 super-rustycom-core = { path = "../super-rustycom-core" }
 clap = "2.33.3"
+serde = { version = "1.0.117", features = [ "derive" ]}
+serde_json = "1.0.59"
