Move to 2018, cleanup, use standard formatting

--- a/super-rustycom-core/Cargo.toml
+++ b/super-rustycom-core/Cargo.toml
@@ -2,5 +2,6 @@
 name = "super-rustycom-core"
 version = "0.1.0"
 authors = ["Santeri Salmijärvi <santeri.salmijarvi@aalto.fi>"]
+edition = "2018"
 
 [dependencies]
