--- a/super-rustycom-client/Cargo.toml
+++ b/super-rustycom-client/Cargo.toml
@@ -2,6 +2,7 @@
 name = "super_rustycom_client"
 version = "0.1.0"
 authors = ["Santeri Salmijärvi <santeri.salmijarvi@aalto.fi>"]
+edition = "2018"
 
 [dependencies]
 super-rustycom-core = { path = "../super-rustycom-core" }
