--- a/super-rustycom-client/Cargo.toml
+++ b/super-rustycom-client/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2018"
 [dependencies]
 super-rustycom-core = { path = "../super-rustycom-core" }
 clap = "2.33.3"
+minifb = "0.19.1"
 serde = { version = "1.0.117", features = [ "derive" ]}
 serde_json = "1.0.59"
