--- a/super-rustycom-client/Cargo.toml
+++ b/super-rustycom-client/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2018"
 [dependencies]
 super-rustycom-core = { path = "../super-rustycom-core" }
 clap = "2.33.3"
+chrono = "0.4.19"
+fern = "0.6.0"
+log = "0.4.11"
 minifb = "0.19.1"
 serde = { version = "1.0.117", features = [ "derive" ]}
 serde_json = "1.0.59"
