--- a/super-rustycom-client/Cargo.toml
+++ b/super-rustycom-client/Cargo.toml
@@ -13,4 +13,4 @@ itertools = "0.10.3"
 log = "0.4.17"
 minifb = "0.23.0"
 serde = { version = "1.0.140", features = ["derive"] }
-serde_json = "1.0.82"
+serde_yaml = "0.9.2"
