main: Remove --pause
Currently always used

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -28,9 +28,7 @@
             "type": "cppvsdbg",
             "request": "launch",
             "program": "${workspaceFolder}/super-rustycom-client/target/debug/super_rustycom_client.exe",
-            "args": [
-                "--pause"
-            ],
+            "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
