--- a/super-rustycom-client/Cargo.toml
+++ b/super-rustycom-client/Cargo.toml
@@ -17,3 +17,4 @@ itertools = "0.10.3"
 log = "0.4.17"
 serde = { version = "1.0.140", features = ["derive"] }
 serde_yaml = "0.9.2"
+strum = { version = "0.24.1", features = ["derive"] }
