--- a/super-rustycom-client/Cargo.toml
+++ b/super-rustycom-client/Cargo.toml
@@ -15,6 +15,5 @@ imgui-glium-renderer = { git = "https://github.com/imgui-rs/imgui-rs", rev = "59
 imgui-winit-support = { git = "https://github.com/imgui-rs/imgui-rs", rev = "592af95" }
 itertools = "0.10.3"
 log = "0.4.17"
-serde = { version = "1.0.140", features = ["derive"] }
-serde_yaml = "0.9.2"
+nanoserde = "0.1.30"
 strum = { version = "0.24.1", features = ["derive"] }
