--- a/super-rustycom-client/Cargo.toml
+++ b/super-rustycom-client/Cargo.toml
@@ -6,7 +6,6 @@ edition = "2018"
 
 [dependencies]
 super-rustycom-core = { path = "../super-rustycom-core" }
-clap = "3.2.16"
 chrono = "0.4.19"
 fern = "0.6.1"
 glium = "0.31"
@@ -16,4 +15,5 @@ imgui-winit-support = { git = "https://github.com/imgui-rs/imgui-rs", rev = "592
 itertools = "0.10.3"
 log = "0.4.17"
 nanoserde = "0.1.30"
+pico-args = "0.5.0"
 strum = { version = "0.24.1", features = ["derive"] }
